--- a/app/views/public/index.html.erb
+++ b/app/views/public/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Fun Games to play to today/h1>
+<h1>Fun Games to play for today</h1>
 <p>Find me in app/views/public/index.html.erb</p>
 
 <%= link_to("games", action: 'games')%>
