added background test

--- a/app/assets/stylesheets/activity-styles.css
+++ b/app/assets/stylesheets/activity-styles.css
@@ -12,10 +12,14 @@ root {
 
 html {
     font-size: 16px;
-    background-image:url('../assets/wave.jpg');
     font-family: "Comic Sans MS", MarkerFelt-Thin, sans-serif;
-    background-repeat:repeat;
+
 }
+
+#image-bg {
+    position: fixed; top: 0; left: 0; }
+.bgwidth { width: 100%; }
+.bgheight { height: 100%; }
 
 #outer-wrapper {
     width: 1024px;
