--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -33,3 +33,36 @@ html {
 
     background-size: cover;
 }
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px;
+    height: 0;
+    overflow: hidden;
+    z-index: 999;
+    display: none;
+}
+.video-container iframe,
+.video-container object,
+.video-container embed {
+    position: absolute;
+    top: 30px;
+    left: 0;
+    width: 75%;
+    height: 75%;
+    margin-left: 10%;
+}
+
+#intro-close {
+    position: absolute;
+    top: 0;
+    left: 85%;
+    z-index: 999;
+}
+
+#play-button {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    opacity: 0.6;
+}
