--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,16 +2,24 @@
 <html>
 <head>
   <title>RailsFunGames</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
+
   <%= csrf_meta_tags %>
 </head>
 <body>
 
 
+<h1>Jessica Sarah</h1>
 
+<div class="video-container">
+  <div id="ytplayer"></div>
+</div>
+
+<%= image_tag 'playButton.png', id: 'play-button', size: '100x100' %>
 
 <%= yield %>
+
+<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 
 </body>
 </html>
